[package]
name = "demo"
version = "0.1.0"
edition = "2021"

authors = [ "Marthinus Scholtz <mscholtz@protonmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
zstd = { path = "../zstd" }
heapless = "0.8.0"